--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,34 @@
-# build output
-dist
-.next
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-package-lock.json
-yarn.lock
-!/yarn.lock
-test/node_modules
+/node_modules
+/.pnp
+.pnp.js
 
-# logs & pids
-*.log
-pids
+# testing
+/coverage
 
-# coverage
-.nyc_output
-coverage
+# next.js
+/.next/
+/out/
 
-# test output
-test/**/out*
-test/**/next-env.d.ts
+# production
+/build
+
+# misc
 .DS_Store
-/e2e-tests
+*.pem
 
-# Editors
-**/.idea
-**/.#*
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# examples
-examples/**/out
-examples/**/.env*.local
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-pr-stats.md
-test-timings.json
-
-# Vercel
+# vercel
 .vercel
-.now
